--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
-name: 'build-test'
+name: Test build
+
 on: # rebuild any PRs and main branch changes
-  pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
+  workflow_dispatch:
+#  pull_request:
+#  push:
+#    branches:
+#      - main
+#      - 'releases/*'
 
 jobs:
   build: # make sure build/ci work properly
