[Feat] Allow support for return type

--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: The GitHub token to use.
     required: true
   repo:
-    description: 'The repository to use. Defaults to current repository. Expected format: owner/repo'
+    description: 'The repository to use. Defaults to current repository. Expected format: owner/repo.'
     required: false
   current_tag:
     description: The current tag to use. Defaults to current/latest tag.
@@ -14,6 +14,10 @@ inputs:
   previous_tag:
     description: The previous tag to use. Defaults to one tag before the current tag.
     required: false
+  return_type:
+    description: 'What data to return. Options are: title_only (default), all.'
+    required: false
+    default: default
 outputs:
   pull_requests:
     description: The pull requests merged between the 2 tags.
