[Feat] Change test action output

--- a/.github/workflows/get-merged-pull-requests.yml
+++ b/.github/workflows/get-merged-pull-requests.yml
@@ -25,5 +25,11 @@ jobs:
 #          return-type: all
       - name: Print merged pull requests
         run: |
-          echo "Pull requests:\n"
-          echo "${{ steps.pull-requests.outputs.pull_requests }}"
+          if [ -z "${{ steps.pull-requests.outputs.pull-requests }}" ]; then
+            echo "No pull requests wered merged between the current and previous tag."
+          else
+            echo "The following pull requests were merged between the current and previous tag:"
+            for pull_request in ${{ steps.pull-requests.outputs.pull-requests }}; do
+              echo "- $pull_request"
+            done
+          fi
