--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -14,7 +14,7 @@ jobs:
   draft-release:
     permissions:
       contents: write
-      pull-requests: write
+      pull_requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v5
