--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "devDependencies": {
     "@octokit/openapi-types": "^18.0.0",
     "@types/node": "^18.16.3",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.39.0",
+    "eslint": "^8.47.0",
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.6.2",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
