--- a/.github/workflows/get-merged-pull-requests.yml
+++ b/.github/workflows/get-merged-pull-requests.yml
@@ -25,9 +25,10 @@ jobs:
 #          return_type: all
       - name: Print merged pull requests
         run: |
-          if (( ${#steps.pull_requests.outputs.pull_requests[@]} )); then
+          pull_requests="${{ steps.pull_requests.outputs.pull_requests }}"
+          if [ -z "pull_requests" ]; then
             echo "The following pull requests were merged between the current and previous tag:"
-            echo "${{ steps.pull_requests.outputs.pull_requests }}" | jq -r '.[].title' | while read -r title; do
+            echo "$pull_requests" | jq -r '.[].title' | while read -r title; do
               echo "- $title"
             done
           else
