--- a/.github/workflows/get-merged-pull-requests.yml
+++ b/.github/workflows/get-merged-pull-requests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Print merged pull requests
         run: |
           pull_requests="${{ steps.pull_requests.outputs.pull_requests }}"
-          if [ -z "pull_requests" ]; then
+          if [ -z "$pull_requests" ]; then
             echo "The following pull requests were merged between the current and previous tag:"
             echo "$pull_requests" | jq -r '.[].title' | while read -r title; do
               echo "- $title"
