--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@ name: Test build
 
 on: # rebuild any PRs and main branch changes
   workflow_dispatch:
-#  pull_request:
-#  push:
-#    branches:
-#      - main
-#      - 'releases/*'
+  pull_request:
+  push:
+    branches:
+      - main
+      - 'releases/*'
 
 jobs:
   build: # make sure build/ci work properly
@@ -24,3 +24,28 @@ jobs:
       - uses: ./
         with:
           milliseconds: 1000
+  get-prs: # make sure we can actually execute the action
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Get merged pull requests
+        uses: ./
+        id: pull_requests
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          repo: ${{ github.repository }}
+#          current_tag: ${{ github.ref }}
+#          previous_tag: ${{ github.ref }}
+#          return_type: all
+      - name: Print merged pull requests
+        run: |
+          pull_requests='${{ steps.pull_requests.outputs.pull_requests }}'
+          if [ -z "$pull_requests" ]; then
+            echo "No pull requests were merged between the current and previous tag."
+          else
+            echo "The following pull requests were merged between the current and previous tag:"
+            echo "$pull_requests" | jq -r '.[].title' | while read -r title; do
+              echo "- $title"
+            done
+          fi
