--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: |
+      - name: Checkout
+        run: |
           npm install
-      - run: |
-          npm run all
-  test: # make sure the action works on a clean machine without building
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./
+      - name: Run all scripts
         with:
-          milliseconds: 1000
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          npm run all
   get-prs: # make sure we can actually execute the action
     runs-on: ubuntu-latest
     steps:
