--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@vercel/ncc": "^0.36.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.47.0",
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.3",
