--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "ghadocs": "github-action-readme-generator --readme README.md"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "github-action-readme-generator": "^1.2.7",
     "jest": "^29.6.2",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
