--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,11 @@ name: Test build
 on: # rebuild any PRs and main branch changes
   workflow_dispatch:
   pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
+    types: [opened, reopened, synchronize]
+#  push:
+#    branches:
+#      - main
+#      - 'releases/*'
 
 jobs:
   build: # make sure build/ci work properly
