--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
-    "ghadocs": "github-action-readme-generator --readme README.md"
+    "readme": "github-action-readme-generator --readme README.md"
   },
   "repository": {
     "type": "git",
