--- a/action.yml
+++ b/action.yml
@@ -19,9 +19,8 @@ inputs:
     required: false
     default: title_only
   commit_is_pull_request_regex:
-    description: "The regex to use to determine if a commit is a pull request merge commit. This is checked against a commit's title. Example regex: `^Merge pull request.*`."
-    required: true
-    default: '/^Merge pull request.*/'
+    description: "The regex to use to determine if a commit is a pull request merge commit. This is checked against a commit's title. Default regex: `^Merge pull request.*`."
+    required: false
   pull_request_regex:
     description: "The regex to use if you want to filter the pull requests. This is checked against a pull request's title. Example regex: `^\\[Feat].*`."
     required: false
