--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-merged-pull-requests-action",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "description": "GitHub action that compares 2 tags and retrieves all pull requests merged between them.",
   "main": "lib/main.js",
@@ -13,7 +13,10 @@
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
-    "readme": "github-action-readme-generator --readme README.md"
+    "readme": "github-action-readme-generator --readme README.md",
+    "bump-patch": "npm version patch --no-git-tag-version && npm run readme && npm run all",
+    "bump-minor": "npm version minor --no-git-tag-version && npm run readme && npm run all",
+    "bump-major": "npm version major --no-git-tag-version && npm run readme && npm run all"
   },
   "repository": {
     "type": "git",
