--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'Get merged pull requests'
 description: 'Compare 2 tags and retrieve all the pull requests merged between them.'
 author: 'Van Ons'
+branding:
+  icon: 'git-pull-request'
+  color: 'green'
 inputs:
   github_token:
     description: 'The GitHub token to use.'
