--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,8 +36,8 @@ jobs:
 #          return_type: all
       - name: Print merged pull requests
         run: |
-          pull_requests="${steps.pull_requests.outputs.pull_requests}"
-          if [ -z "${pull_requests}" ]; then
+          pull_requests=$(echo ${{ steps.pull_requests.outputs.pull_requests }} | sed "s/\"/\\\\\"/g")
+          if [ -z "$pull_requests" ]; then
             echo "No pull requests were merged between the current and previous tag."
           else
             echo "The following pull requests were merged between the current and previous tag:"
