--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,10 @@ inputs:
   commit_is_pull_request_regex:
     description: "The regex to use to determine if a commit is a pull request merge commit. This is checked against a commit's title. Default regex: `^Merge pull request.*`."
     required: false
+  apply_commit_is_pull_request_regex:
+    description: 'Whether to apply `commit_is_pull_request_regex` to the commits.'
+    required: false
+    default: false
   pull_request_regex:
     description: "The regex to use if you want to filter the pull requests. This is checked against a pull request's title. Example regex: `^\\[Feat].*`."
     required: false
