[Chore] Add v1 update command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "readme": "github-action-readme-generator --readme README.md",
     "bump-patch": "npm version patch --no-git-tag-version && npm run readme && npm run all",
     "bump-minor": "npm version minor --no-git-tag-version && npm run readme && npm run all",
-    "bump-major": "npm version major --no-git-tag-version && npm run readme && npm run all"
+    "bump-major": "npm version major --no-git-tag-version && npm run readme && npm run all",
+    "update-v1": "git tag -sfa v1 -m \"Update v1 tag\" && git push origin v1 --force"
   },
   "repository": {
     "type": "git",
