--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -11,7 +11,7 @@ categories:
     labels:
       - 'change'
       - 'dependencies'
-change-template: '- $TITLE #$NUMBER (props to @$AUTHOR)'
+change-template: '- $TITLE #$NUMBER (by @$AUTHOR)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
   major:
