--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "get-merged-pull-requests-action",
   "version": "1.1.1",
   "private": true,
-  "description": "GitHub action that compares 2 tags and retrieves all pull requests merged between them.",
+  "description": "GitHub action that compares two tags and retrieves all pull requests merged between them.",
   "main": "lib/main.js",
   "scripts": {
     "dev": "ts-node src/main.ts",
