--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
           INPUT_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run all
 
   get-prs: # make sure we can actually execute the action
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
