feat: add support for commit limit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
         id: pull_requests
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit_limit: 1
 
       - name: Print merged pull requests
         env:
