feat(workflows): add workflow environment

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build: # make sure build/ci work properly
     runs-on: ubuntu-latest
+    environment: tests
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,6 +27,7 @@ jobs:
   get-prs: # make sure we can actually execute the action
     needs: build
     runs-on: ubuntu-latest
+    environment: tests
     steps:
       - name: Checkout
         uses: actions/checkout@v4
