feat: return json file instead of array

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,9 +40,10 @@ jobs:
 
       - name: Print merged pull requests
         env:
-          PULL_REQUESTS: ${{ steps.pull_requests.outputs.pull_requests }}
+          PULL_REQUESTS_FILE: ${{ steps.pull_requests.outputs.pull_requests_file }}
         run: |
-          titles=$(jq -r '.[].title' <<<"$PULL_REQUESTS")
+          titles=$(jq -r '.[].title' "$PULL_REQUESTS_FILE")
+
           if [ -z "$titles" ]; then
             echo "No pull requests were merged between the current and previous tag."
           else
