feat: upgrade eslint and related dependencies

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "ts-node src/main.ts",
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write '**/*.{ts,js,mjs}'",
+    "format:check": "prettier --check '**/*.{ts,js,mjs}'",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "all": "npm run build && npm run format:check && npm run lint:check && npm run package && npm test",
     "readme": "github-action-readme-generator --readme README.md",
     "bump-patch": "npm version patch --no-git-tag-version && npm run all",
     "bump-minor": "npm version minor --no-git-tag-version && npm run all",
@@ -34,17 +35,21 @@
     "@actions/github": "^6.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "@octokit/openapi-types": "^24.0.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "@types/node": "^22.13.14",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "@vercel/ncc": "^0.38.3",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
+    "eslint": "^9.24.0",
     "eslint-plugin-github": "^5.1.8",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "github-action-readme-generator": "^1.8.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "prettier": "^3.5.3",
