chore: set previous_tag in test workflow to v1.0.0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
         id: pull_requests
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          previous_tag: v1.0.0
           commit_limit: 1
 
       - name: Print merged pull requests
